--- a/index.html
+++ b/index.html
@@ -54,6 +54,34 @@
                             </div>
                         </div>
                     </fieldset>
+                    <fieldset class="address">
+                        <legend>Endereço residencial</legend>
+                        <div class="input-wrapper">
+                            <label for="cep">CEP</label>
+                            <input type="number" id="cep" name="cep">
+                        </div>
+                        <div class="flex">
+                            <div class="input-wrapper flex-2">
+                                <label for="street">Rua</label>
+                                <input type="number" id="street" name="street" value="Rua das Flores" disabled>
+                                <div class="input-wrapper flex-1">
+                                    <label for="Number">Número</label>
+                                    <input type="number" id="number" name="number">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex">
+                            <div class="input-wrapper flex-2">
+                                <label for="city">Cidade</label>
+                                <input type="number" id="city" name="city" value="São Paulo" disabled>
+                                <div class="input-wrapper flex-1">
+                                    <label for="state">Estado</label>
+                                    <input type="text" id="state" name="state" disabled value="São Paulo">
+                                </div>
+                            </div>
+
+                        </div>
+                    </fieldset>    
                 </form>
             </div>
         </main>
